# shocker

./: .coveragerc  .gitignore  README.md  README.rst  ShockerPrototype.py  setup.cfg  setup.py
.github/workflows/: python-ci.yml
shocker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shocker/data/: martini_md_anis.mdp  martini_md_anis_slow.mdp  min.mdp
shocker/src/: __init__.py  cluster.py  file_mod.py  index_processing.py  vesicle_data.py  water_identifier.py  water_remover.py  water_replacement.py  water_repositioning.py
shocker/tests/: test_cluster.py  test_file_mod.py  test_index_processing.py  test_vesicle_data.py  test_water_identifier.py  test_water_remover.py  test_water_replacement.py  test_water_repositioning.py
shocker/tests/test_data/: function_result_water_move.gro  function_result_water_move_aa.gro  gro_to_np_test.gro  result.mdp  test_data_water_move.gro  test_data_water_move_aa.gro  topol_test.top  water_remover_function_result.gro  water_remover_test_aa.gro
tutorial_files/: index_small.ndx  martini_md_anis.mdp  martini_v3.0_CDLs.itp  martini_v3.0_ions.itp  martini_v3.0_phospholipids.itp  martini_v3.0_solvents.itp  topol_POPC.top  topol_ion.top  topol_small.top
