[wheel]
universal = 1

[metadata]
name = shocker
author = Marco van Tilburg
author_email = p.a.m.van.tilburg@rug.nl
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/marrink-lab/shocker
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = osmotic shock martini

[options]
packages = find:
setup-requires =
    setuptools >= 46.4.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
    numpy
    MDAnalysis 
    pyvista
zip-safe = False


#[build_sphinx]
#source-dir = doc/source
#build-dir = doc/build
#warning-is-error = True
#builder = html
